<resources>
    <string name="app_name">Trowser</string>
    <string name="app_name_short" translatable="false">Trowser</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading">Loading&#8230;</string>
    <string name="url_prompt">Input query text or URL</string>
    <string name="can_not_recognize">Can not recognize</string>
    <string name="speak">Search query</string>
    <string name="open_new_tab">Open new Tab</string>
    <string name="close">Close</string>
    <string name="web_perm_request_confirmation">This web page wants to use following resources:\n\n%s</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="location">Location</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="download_started">Download started…\nFile will be stored at:\n%s</string>
    <string name="downloading_file">Downloading file…</string>
    <string name="err_cant_open_file_chooser">Cannot Open File Chooser</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="new_bookmark">New bookmark</string>
    <string name="title">Title</string>
    <string name="url" translatable="false">URL</string>
    <string name="search_history">Search history</string>
    <string name="engine">Search Engine</string>
    <string name="choose_default_search_engine">Choose default search engine</string>
    <string name="set_search_engine_as_homepage">Set search engine as homepage</string>
    <string name="save">Save</string>
    <string name="search_engine_url_with_query_placeholder_query">Search engine URL with query placeholder [query]</string>
    <string name="change_search_engine">Change Search Engine</string>
    <string name="change_user_agent">Change User Agent</string>
    <string name="user_agent_string">User Agent String</string>
    <string name="choose_user_agent_string">Choose User Agent String</string>
    <string name="edit_user_agent_string">Edit User Agent String</string>
    <string name="nothing">Nothing</string>
    <string name="cancelled">Cancelled</string>
    <string name="download">Download</string>
    <string name="file_not_found">File not found</string>
    <string name="no_app_for_file_type">No applications found to open this file type</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="msg_delete_history">Delete selected history items?</string>
    <string name="msg_delete_history_all">Delete all history items?</string>
    <string name="open_folder">Open containing folder</string>
    <string name="no_file_explorer_msg">Seem there is no any suitable file explorer app installed on your device</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="shortcut">Shortcut</string>
    <string name="toggle_main_menu">Toggle main menu</string>
    <string name="navigate_back">Navigate back</string>
    <string name="navigate_home">Navigate home</string>
    <string name="refresh_page">Refresh page</string>
    <string name="voice_search">Voice search</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="not_set">Not set</string>
    <string name="action">Action:</string>
    <string name="current_key">Current key:</string>
    <string name="set_key_for_action">Set key for action</string>
    <string name="press_eny_key">Press any key...</string>
    <string name="clear">Clear</string>
    <string name="install">Install</string>
    <string name="turn_on_unknown_sources">Please turn on \"Unknown sources\" system setting</string>
    <string name="turn_on_unknown_sources_for_app">Please allow Trowser to install apps from \"Unknown sources\" in system settings</string>
    <string name="storage_not_mounted">Storage not mounted</string>
    <string name="can_not_create_downloads">Can not create downloads dir</string>
    <string name="voice_search_not_found">Voice search not found</string>
    <string name="new_version_dialog_title">New version available</string>
    <string name="later">Later</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_notifications_description">Notifications regarding downloads statuses</string>
    <string name="main">Main</string>
    <string name="version_and_updates"><![CDATA[Version & updates]]></string>
    <string name="version_s">Version: %s</string>
    <string name="update_channel">Update channel:</string>
    <string name="auto_check_for_updates">Auto check for updates</string>
    <string name="update">Update</string>
    <string name="new_version_available_s">New version available: %s</string>
    <string name="web_browser_optimized_for_tvs">Web browser optimized for TVs</string>
    <string name="warning">Warning</string>
    <string name="unprotected_connection">Unprotected connection</string>
    <string name="err_webview_can_not_link">Can not link to WebView component. Try to install Android System WebView component first.</string>
    <string name="new_tab_title">[NEW TAB]</string>
    <string name="open_a_new_tab_here">Open a new tab here</string>
    <string name="tabs">Tabs</string>
    <array name="tabs_options">
        <item>Open new Tab</item>
        <item>Close current</item>
        <item>Close all</item>
        <item>Move left</item>
        <item>Move right</item>
    </array>
    <string name="ssl_expired">The certificate has expired</string>
    <string name="ssl_idmismatch">Hostname mismatch</string>
    <string name="ssl_date_invalid">The date of the certificate is invalid</string>
    <string name="ssl_invalid">A generic error occurred</string>
    <string name="back_to_safety">Back to safety</string>
    <string name="go_im_aware">Go. I am aware of the risk</string>
    <string name="connection_isnt_secure">Connection is not secure</string>
    <string name="hostname">Hostname:</string>
    <string name="err_desk">Error description:</string>
    <string name="details">Details:</string>
    <string name="exit">Exit</string>
    <string name="find_in_apps_store">Find in applications store</string>
    <string name="close_application">Close application</string>
    <string name="close_tab">Close tab</string>
    <string name="navigate_forward">Navigate forward</string>
    <string name="toggle_ads_blocking">Toggle ads blocking</string>
    <string name="never">never</string>
    <string name="last_update">Last update</string>
    <string name="update_ad_blocker_list">Update ad-blocker list</string>
    <string name="toggle_keep_screen_on">Keep screen on</string>
    <string name="need_restart">Need application restart</string>
    <string name="theme">Theme</string>
    <array name="themes">
        <item>System</item>
        <item>White</item>
        <item>Dark</item>
    </array>
    <string name="incognito_mode">Incognito mode</string>
    <string name="incognito_mode_hint">Now you can browse privately, and other people who use this device won’t see your activity. Trowser won’t save your browsing history, cookies and site data, information entered in forms.\n\nHowever, downloads and bookmarks will be saved. Your activity might still be visible to websites you visit, your organization or internet service provider.</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="why_icon_changed">Why icon changed?</string>
    <string name="clear_web_cache">Clear web cache</string>
</resources>
