<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="horizontal">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibMenu"
        android:src="@drawable/ic_close_grey_900_36dp"
        android:background="@drawable/actionbar_button_bg_selector"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/close_application"
        android:nextFocusRight="@+id/flUrl"
        android:nextFocusDown="@+id/vTabs"
        />

    <LinearLayout
        android:id="@+id/flUrl"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/urlbar_bg_selector"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@+id/vTabs"
        android:nextFocusRight="@+id/ibVoiceSearch"
        >

      <EditText
          android:id="@+id/etUrl"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginVertical="8dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"

          android:hint="@string/url_prompt"
          android:iconifiedByDefault="false"
          android:imeOptions="actionSearch"
          android:importantForAutofill="no"
          android:inputType="textFilter|textNoSuggestions|textUri"
          android:textColor="@color/default_url_color"
          android:background="@null"
          android:nextFocusLeft="@+id/ibMenu"
          android:nextFocusRight="@+id/ibVoiceSearch"
          />

      <ImageButton
          android:id="@+id/ibVoiceSearch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginVertical="11dp"
          android:layout_marginEnd="7dp"
          android:layout_marginStart="-14dp"
          android:padding="5dp"
          android:background="@drawable/actionbar_button_bg_selector"
          android:contentDescription="@string/voice_search"
          android:nextFocusLeft="@+id/flUrl"
          android:nextFocusRight="@+id/ibHistory"
          android:src="@drawable/ic_voice_search_empty_24dp"
          />

    </LinearLayout>


    <ImageButton
        android:id="@+id/ibHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/actionbar_button_bg_selector"
        android:contentDescription="@string/history"
        android:nextFocusRight="@+id/ibFavorites"
        android:nextFocusDown="@+id/vTabs"
        android:src="@drawable/ic_history_grey_900_36dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibFavorites"
        android:src="@drawable/ic_star_border_grey_900_36dp"
        android:nextFocusRight="@+id/ibDownloads"
        android:nextFocusDown="@+id/vTabs"
        android:background="@drawable/actionbar_button_bg_selector"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/favorites" />

    <ImageButton
        android:id="@+id/ibDownloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/actionbar_button_bg_selector"
        android:contentDescription="@string/downloads"
        android:nextFocusRight="@+id/ibIncognito"
        android:nextFocusDown="@+id/vTabs"
        android:src="@drawable/ic_file_download_grey_900" />

    <com.android.trowser.widgets.CheckableImageButton
        android:id="@+id/ibIncognito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/actionbar_button_bg_selector"
        android:contentDescription="@string/incognito_mode"
        android:nextFocusRight="@+id/ibSettings"
        android:nextFocusDown="@+id/vTabs"
        android:src="@drawable/ic_incognito"
        />

    <ImageButton
        android:id="@+id/ibSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/actionbar_button_bg_selector"
        android:contentDescription="@string/settings"
        android:nextFocusDown="@+id/vTabs"
        android:src="@drawable/ic_settings_grey_900_24dp"
        />

</merge>